--- a/style.css
+++ b/style.css
@@ -1,6 +1,32 @@
 body
 {
 	background-color: powderblue;
+	margin: 0px;
+}
+
+.header
+{
+	position: sticky;
+	top: 0px;
+	background-color: aqua;
+}
+
+.header div
+{
+	font-size: 35px;
+	margin-left: 16px;
+}
+
+.header hr
+{
+	height: 0px;
+    border: none;
+    border-top: 3px solid black;
+}
+
+.main
+{
+	margin: 8px;
 }
 
 table, td, th
